events logging to db